feat: sync docs with new partner apis

--- a/api-reference/balances/overview.mdx
+++ b/api-reference/balances/overview.mdx
@@ -246,4 +246,4 @@ Balances update in real-time when:
 - Pix payments are received or sent via the [Pix API](/api-reference/pix/overview)
 - On-chain transfers are confirmed via the [On-chain API](/api-reference/onchain/overview)
 
-Use [webhooks](/webhooks) to react to balance changes without polling.
+Use the [Events API](/api-reference/partner/events/overview) to track balance changes without constant polling.
