--- a/authentication.mdx
+++ b/authentication.mdx
@@ -92,7 +92,7 @@ In sandbox mode:
 - No real money is moved
 - Pix payments are simulated
 - Trades execute with test balances
-- Webhooks are delivered normally
+- Events are generated normally
 
 ## Authentication errors
 
