--- a/introduction.mdx
+++ b/introduction.mdx
@@ -168,8 +168,8 @@ const trade = await fetch(
   <Card title="Create customers" icon="user-plus" href="/api-reference/customers/overview">
     Start onboarding your users to the platform.
   </Card>
-  <Card title="Webhooks" icon="webhook" href="/webhooks">
-    Set up real-time notifications for events.
+  <Card title="Pix Payments" icon="bolt" href="/api-reference/pix/overview">
+    Accept and send instant Pix payments.
   </Card>
   <Card title="Error handling" icon="triangle-exclamation" href="/errors">
     Understand error responses and how to handle them.
