--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -167,8 +167,8 @@ func apiRequest(url string, maxRetries int) ([]byte, error) {
     ```
   </Accordion>
 
-  <Accordion title="Use webhooks">
-    Instead of polling for status changes, use [webhooks](/webhooks) to receive real-time notifications.
+  <Accordion title="Use events API">
+    Instead of polling for status changes, use the [Events API](/api-reference/partner/events/overview) to track state changes efficiently.
   </Accordion>
 
   <Accordion title="Spread requests over time">
