--- a/api-reference/customers/create-business.mdx
+++ b/api-reference/customers/create-business.mdx
@@ -185,7 +185,7 @@ Create a customer representing a Brazilian company.
 <RequestExample>
 ```bash cURL
 curl -X POST https://api.bipa.tech/v1/customers \
-  -H "Authorization: Bearer bipa_live_sk_..." \
+  -H "X-API-Key: bipa_prod_..." \
   -H "Content-Type: application/json" \
   -d '{
     "type": "business",
@@ -236,7 +236,7 @@ import requests
 response = requests.post(
     "https://api.bipa.tech/v1/customers",
     headers={
-        "Authorization": "Bearer bipa_live_sk_...",
+        "X-API-Key": "bipa_prod_...",
         "Content-Type": "application/json"
     },
     json={
@@ -289,7 +289,7 @@ customer = response.json()
 const response = await fetch("https://api.bipa.tech/v1/customers", {
   method: "POST",
   headers: {
-    "Authorization": "Bearer bipa_live_sk_...",
+    "X-API-Key": "bipa_prod_...",
     "Content-Type": "application/json"
   },
   body: JSON.stringify({
