--- a/api-reference/customers/get-customer.mdx
+++ b/api-reference/customers/get-customer.mdx
@@ -76,7 +76,7 @@ Returns the full customer object.
 <RequestExample>
 ```bash cURL
 curl https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6 \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 ```
 
 ```python Python
@@ -84,7 +84,7 @@ import requests
 
 response = requests.get(
     "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6",
-    headers={"Authorization": "Bearer bipa_live_sk_..."}
+    headers={"X-API-Key": "bipa_prod_..."}
 )
 
 customer = response.json()
@@ -94,7 +94,7 @@ customer = response.json()
 const response = await fetch(
   "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6",
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
