--- a/api-reference/customers/list-customers.mdx
+++ b/api-reference/customers/list-customers.mdx
@@ -66,15 +66,15 @@ Returns a paginated list of customers.
 ```bash cURL
 # List all customers
 curl "https://api.bipa.tech/v1/customers?limit=20" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Filter by type and status
 curl "https://api.bipa.tech/v1/customers?type=individual&status=active" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Paginate with cursor
 curl "https://api.bipa.tech/v1/customers?limit=20&starting_after=cus_abc123" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 ```
 
 ```python Python
@@ -83,14 +83,14 @@ import requests
 # List all customers
 response = requests.get(
     "https://api.bipa.tech/v1/customers",
-    headers={"Authorization": "Bearer bipa_live_sk_..."},
+    headers={"X-API-Key": "bipa_prod_..."},
     params={"limit": 20}
 )
 
 # Filter by type
 response = requests.get(
     "https://api.bipa.tech/v1/customers",
-    headers={"Authorization": "Bearer bipa_live_sk_..."},
+    headers={"X-API-Key": "bipa_prod_..."},
     params={
         "type": "individual",
         "status": "active"
@@ -105,7 +105,7 @@ customers = response.json()
 const response = await fetch(
   "https://api.bipa.tech/v1/customers?limit=20",
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
@@ -117,7 +117,7 @@ const filtered = await fetch(
     starting_after: "cus_abc123"
   }),
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
@@ -180,7 +180,7 @@ def get_all_customers():
 
         response = requests.get(
             "https://api.bipa.tech/v1/customers",
-            headers={"Authorization": "Bearer bipa_live_sk_..."},
+            headers={"X-API-Key": "bipa_prod_..."},
             params=params
         ).json()
 
