--- a/api-reference/customers/update-customer.mdx
+++ b/api-reference/customers/update-customer.mdx
@@ -70,7 +70,7 @@ Returns the updated customer object.
 <RequestExample>
 ```bash cURL
 curl -X PATCH https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6 \
-  -H "Authorization: Bearer bipa_live_sk_..." \
+  -H "X-API-Key: bipa_prod_..." \
   -H "Content-Type: application/json" \
   -d '{
     "email": "joao.novo@example.com",
@@ -92,7 +92,7 @@ import requests
 response = requests.patch(
     "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6",
     headers={
-        "Authorization": "Bearer bipa_live_sk_...",
+        "X-API-Key": "bipa_prod_...",
         "Content-Type": "application/json"
     },
     json={
@@ -118,7 +118,7 @@ const response = await fetch(
   {
     method: "PATCH",
     headers: {
-      "Authorization": "Bearer bipa_live_sk_...",
+      "X-API-Key": "bipa_prod_...",
       "Content-Type": "application/json"
     },
     body: JSON.stringify({
