--- a/api-reference/onchain/create-deposit-address.mdx
+++ b/api-reference/onchain/create-deposit-address.mdx
@@ -61,7 +61,7 @@ Create a unique deposit address for a customer. Each customer can have one addre
 <RequestExample>
 ```bash cURL - USDT on Polygon
 curl -X POST https://api.bipa.tech/v1/onchain/addresses \
-  -H "Authorization: Bearer bipa_live_sk_..." \
+  -H "X-API-Key: bipa_prod_..." \
   -H "Content-Type: application/json" \
   -d '{
     "customer_id": "cus_a1b2c3d4e5f6",
@@ -72,7 +72,7 @@ curl -X POST https://api.bipa.tech/v1/onchain/addresses \
 
 ```bash cURL - Bitcoin
 curl -X POST https://api.bipa.tech/v1/onchain/addresses \
-  -H "Authorization: Bearer bipa_live_sk_..." \
+  -H "X-API-Key: bipa_prod_..." \
   -H "Content-Type: application/json" \
   -d '{
     "customer_id": "cus_a1b2c3d4e5f6",
@@ -88,7 +88,7 @@ import requests
 response = requests.post(
     "https://api.bipa.tech/v1/onchain/addresses",
     headers={
-        "Authorization": "Bearer bipa_live_sk_...",
+        "X-API-Key": "bipa_prod_...",
         "Content-Type": "application/json"
     },
     json={
@@ -110,7 +110,7 @@ const response = await fetch(
   {
     method: "POST",
     headers: {
-      "Authorization": "Bearer bipa_live_sk_...",
+      "X-API-Key": "bipa_prod_...",
       "Content-Type": "application/json"
     },
     body: JSON.stringify({
