--- a/api-reference/onchain/get-transfer.mdx
+++ b/api-reference/onchain/get-transfer.mdx
@@ -93,7 +93,7 @@ Returns the full transfer object.
 <RequestExample>
 ```bash cURL
 curl https://api.bipa.tech/v1/onchain/transfers/txn_abc123 \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 ```
 
 ```python Python
@@ -105,7 +105,7 @@ def to_human(amount_str: str, decimals: int) -> Decimal:
 
 response = requests.get(
     "https://api.bipa.tech/v1/onchain/transfers/txn_abc123",
-    headers={"Authorization": "Bearer bipa_live_sk_..."}
+    headers={"X-API-Key": "bipa_prod_..."}
 )
 
 transfer = response.json()
@@ -127,7 +127,7 @@ function toHuman(amountStr, decimals) {
 const response = await fetch(
   "https://api.bipa.tech/v1/onchain/transfers/txn_abc123",
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
@@ -228,7 +228,7 @@ def wait_for_confirmation(transfer_id: str, timeout: int = 3600):
     while time.time() - start_time < timeout:
         response = requests.get(
             f"https://api.bipa.tech/v1/onchain/transfers/{transfer_id}",
-            headers={"Authorization": "Bearer bipa_live_sk_..."}
+            headers={"X-API-Key": "bipa_prod_..."}
         )
 
         transfer = response.json()
