--- a/api-reference/onchain/list-transfers.mdx
+++ b/api-reference/onchain/list-transfers.mdx
@@ -72,15 +72,15 @@ Retrieve a paginated list of on-chain transfers.
 ```bash cURL
 # List all transfers
 curl "https://api.bipa.tech/v1/onchain/transfers?limit=20" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Filter by customer and direction
 curl "https://api.bipa.tech/v1/onchain/transfers?customer_id=cus_abc123&direction=inbound" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Filter by asset and status
 curl "https://api.bipa.tech/v1/onchain/transfers?asset=USDT&status=confirmed" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 ```
 
 ```python Python
@@ -89,7 +89,7 @@ import requests
 # List all pending inbound transfers
 response = requests.get(
     "https://api.bipa.tech/v1/onchain/transfers",
-    headers={"Authorization": "Bearer bipa_live_sk_..."},
+    headers={"X-API-Key": "bipa_prod_..."},
     params={
         "direction": "inbound",
         "status": "processing",
@@ -123,7 +123,7 @@ const params = new URLSearchParams({
 const response = await fetch(
   `https://api.bipa.tech/v1/onchain/transfers?${params}`,
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
@@ -210,7 +210,7 @@ def get_transfer_summary(customer_id: str = None, days: int = 30):
 
         response = requests.get(
             "https://api.bipa.tech/v1/onchain/transfers",
-            headers={"Authorization": "Bearer bipa_live_sk_..."},
+            headers={"X-API-Key": "bipa_prod_..."},
             params=params
         ).json()
 
