--- a/api-reference/pix/list-keys.mdx
+++ b/api-reference/pix/list-keys.mdx
@@ -53,7 +53,7 @@ Returns a list of Pix key objects.
 <RequestExample>
 ```bash cURL
 curl "https://api.bipa.tech/v1/pix/keys?customer_id=cus_a1b2c3d4e5f6" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 ```
 
 ```python Python
@@ -61,7 +61,7 @@ import requests
 
 response = requests.get(
     "https://api.bipa.tech/v1/pix/keys",
-    headers={"Authorization": "Bearer bipa_live_sk_..."},
+    headers={"X-API-Key": "bipa_prod_..."},
     params={"customer_id": "cus_a1b2c3d4e5f6"}
 )
 
@@ -78,7 +78,7 @@ const params = new URLSearchParams({
 const response = await fetch(
   `https://api.bipa.tech/v1/pix/keys?${params}`,
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
