--- a/api-reference/pix/list-transactions.mdx
+++ b/api-reference/pix/list-transactions.mdx
@@ -66,15 +66,15 @@ Returns a paginated list of Pix transaction objects.
 ```bash cURL
 # List all transactions
 curl "https://api.bipa.tech/v1/pix?limit=20" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Filter by customer and direction
 curl "https://api.bipa.tech/v1/pix?customer_id=cus_abc123&direction=inbound" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Filter by date range
 curl "https://api.bipa.tech/v1/pix?created_after=2024-01-01T00:00:00Z&created_before=2024-01-31T23:59:59Z" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 ```
 
 ```python Python
@@ -87,7 +87,7 @@ def to_brl(amount: str, decimals: int) -> Decimal:
 # List all completed inbound transactions for a customer
 response = requests.get(
     "https://api.bipa.tech/v1/pix",
-    headers={"Authorization": "Bearer bipa_live_sk_..."},
+    headers={"X-API-Key": "bipa_prod_..."},
     params={
         "customer_id": "cus_a1b2c3d4e5f6",
         "direction": "inbound",
@@ -116,7 +116,7 @@ const params = new URLSearchParams({
 const response = await fetch(
   `https://api.bipa.tech/v1/pix?${params}`,
   {
-    headers: { "Authorization": "Bearer bipa_live_sk_..." }
+    headers: { "X-API-Key": "bipa_prod_..." }
   }
 );
 
@@ -206,7 +206,7 @@ def get_all_customer_transactions(customer_id: str):
 
         response = requests.get(
             "https://api.bipa.tech/v1/pix",
-            headers={"Authorization": "Bearer bipa_live_sk_..."},
+            headers={"X-API-Key": "bipa_prod_..."},
             params=params
         ).json()
 
