--- a/introduction.mdx
+++ b/introduction.mdx
@@ -67,7 +67,7 @@ Create a customer and execute a BRL to USDT trade:
 ```bash cURL
 # Create a customer
 curl -X POST https://api.bipa.tech/v1/customers \
-  -H "Authorization: Bearer bipa_live_sk_..." \
+  -H "X-API-Key: bipa_prod_..." \
   -H "Content-Type: application/json" \
   -d '{
     "type": "individual",
@@ -78,11 +78,11 @@ curl -X POST https://api.bipa.tech/v1/customers \
 
 # Get a quote
 curl "https://api.bipa.tech/v1/quotes?from=BRL&to=USDT&amount_cents=100000" \
-  -H "Authorization: Bearer bipa_live_sk_..."
+  -H "X-API-Key: bipa_prod_..."
 
 # Execute the trade
 curl -X POST https://api.bipa.tech/v1/quotes/quote_abc123/execute \
-  -H "Authorization: Bearer bipa_live_sk_..." \
+  -H "X-API-Key: bipa_prod_..." \
   -H "Content-Type: application/json" \
   -d '{"customer_id": "cus_a1b2c3d4e5f6"}'
 ```
@@ -91,7 +91,7 @@ curl -X POST https://api.bipa.tech/v1/quotes/quote_abc123/execute \
 import requests
 
 headers = {
-    "Authorization": "Bearer bipa_live_sk_...",
+    "X-API-Key": "bipa_prod_...",
     "Content-Type": "application/json"
 }
 
@@ -124,7 +124,7 @@ trade = requests.post(
 
 ```javascript Node.js
 const headers = {
-  "Authorization": "Bearer bipa_live_sk_...",
+  "X-API-Key": "bipa_prod_...",
   "Content-Type": "application/json"
 };
 
